--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /public/*.swf
 /config/additional_environment.rb
+/config/configuration.yml
 /config/database.yml
 /config/email.yml
 /config/initializers/session_store.rb
